--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a ui-sref="home"><img class="navbar-brand" src="../images/delosLogo.png" alt="" /></a>
+          <a ui-sref="home"><img class="navbar-brand" ng-src="../images/delosLogo.png" alt="" /></a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
